--- a/package.json
+++ b/package.json
@@ -38,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "get-urls": "^10.0.0",
+    "linkify-it": "^3.0.2",
+    "lodash": "^4.17.20"
   }
 }
